sample/pair-pro/application/errors/web-gpu-unavaliable-error.ts
export class WebGPUUnavailableError extends Error {
  constructor(
    message: string = 'WebGPU support is missing or disabled in your browser'
  ) {
    super(message);
  }
}
